cilium/CiliumClusterwideNetworkPolicy-cilium-health-checks.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cilium-health-checks
  namespace: kube-system
spec:
  egress:
    - toEntities:
        - remote-node
  endpointSelector:
    matchLabels:
      reserved:health: ""
  ingress:
    - fromEntities:
        - remote-node
