cilium/CiliumNetworkPolicy-allow-kube-dns-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-dns-apiserver-egress
  namespace: kube-system
spec:
  description: Allow coredns to talk to kube-apiserver
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
